--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <h2>NET_VIZ</h2>
 
     <div class="canvas-container">
-      <p class='animTitle'>Neural Netz</p>
       <div class="input-group">
         <div class="input-wrapper">
           <div id='start' class="input">
@@ -30,6 +29,12 @@
               reset
             </div>
           </div>
+        </div>
+      </div>
+      <div class="input-group">
+        <div class="input-wrapper">
+          <label for="cells">Number of Cells</label>
+          <input id="cell-count" type="number" placeholder="1-1000" name="cells" value="" min="0" max="1000">
         </div>
       </div>
       <canvas id="canvas" width="600" height="600"></canvas>
