--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
 
     <h2>NET_VIZ</h2>
+    <!-- <img src="backteria_bg.jpg" id="bg-img"> -->
 
     <div class="canvas-container">
       <div class="input-group">
@@ -42,20 +43,3 @@
 
   </body>
 </html>
-
-
-<!--
-
-current
-2800????
-700
-550
-550
-500
-500
-
-2600/4
-775
-625
-625
-575 -->
